parser.output
   0  $accept : %entry% $end

   1  program : decls main EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  vdecl : dtype ID SEMI

   6  fdecl : FUNCTION ID LPAREN formals RPAREN LBRACE stmts RBRACE

   7  main : MAIN LPAREN RPAREN LBRACE stmts RBRACE

   8  formals :
   9          | dtype ID
  10          | formals COMMA dtype ID

  11  dtype : INT
  12        | BOOLEAN
  13        | FLOAT
  14        | MATRIX

  15  stmts :
  16        | stmt stmts

  17  stmt : expr SEMI
  18       | RETURN expr SEMI
  19       | BREAK SEMI
  20       | CONTINUE SEMI
  21       | IF LPAREN expr RPAREN LBRACE stmts RBRACE elifstmts
  22       | IF LPAREN expr RPAREN LBRACE stmts RBRACE elifstmts ELSE LBRACE stmts RBRACE
  23       | FOR LPAREN stmt SEMI expr SEMI expr RPAREN LBRACE stmts RBRACE
  24       | WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
  25       | vdecl
  26       | assignstmt

  27  elifstmts :
  28            | ELIF LPAREN expr RPAREN LBRACE stmts RBRACE elifstmts

  29  assignstmt : dtype ID ASSIGN expr SEMI
  30             | ID PLUSASSIGN expr SEMI
  31             | ID MINUSASSIGN expr SEMI
  32             | ID ASSIGN expr SEMI

  33  expr : ILIT
  34       | FLIT
  35       | MLIT
  36       | TRUE
  37       | FALSE
  38       | ID
  39       | ID LPAREN inputs RPAREN
  40       | LPAREN expr RPAREN
  41       | MINUS expr
  42       | NOT expr
  43       | expr AND expr
  44       | expr OR expr
  45       | expr PLUS expr
  46       | expr MINUS expr
  47       | expr TIMES expr
  48       | expr DIVIDE expr
  49       | expr MOD expr
  50       | expr EQ expr
  51       | expr NEQ expr
  52       | expr LT expr
  53       | expr LEQ expr
  54       | expr GT expr
  55       | expr GEQ expr
  56       | expr REFEQ expr

  57  inputs :
  58         | expr
  59         | expr COMMA inputs

  60  MLIT : LBRACK matrix_row_list RBRACK

  61  matrix_row_list : matrix_row
  62                  | matrix_row SEMI matrix_row_list

  63  matrix_row : elements

  64  elements : element
  65           | element COMMA elements

  66  element : FLIT

  67  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (67)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (67)

	.  reduce 67


state 4
	program : decls . main EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	MAIN  shift 5
	FUNCTION  shift 6
	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	.  error

	main  goto 11
	vdecl  goto 12
	fdecl  goto 13
	dtype  goto 14


state 5
	main : MAIN . LPAREN RPAREN LBRACE stmts RBRACE  (7)

	LPAREN  shift 15
	.  error


state 6
	fdecl : FUNCTION . ID LPAREN formals RPAREN LBRACE stmts RBRACE  (6)

	ID  shift 16
	.  error


state 7
	dtype : INT .  (11)

	.  reduce 11


state 8
	dtype : FLOAT .  (13)

	.  reduce 13


state 9
	dtype : BOOLEAN .  (12)

	.  reduce 12


state 10
	dtype : MATRIX .  (14)

	.  reduce 14


state 11
	program : decls main . EOF  (1)

	EOF  shift 17
	.  error


state 12
	decls : decls vdecl .  (3)

	.  reduce 3


state 13
	decls : decls fdecl .  (4)

	.  reduce 4


state 14
	vdecl : dtype . ID SEMI  (5)

	ID  shift 18
	.  error


state 15
	main : MAIN LPAREN . RPAREN LBRACE stmts RBRACE  (7)

	RPAREN  shift 19
	.  error


state 16
	fdecl : FUNCTION ID . LPAREN formals RPAREN LBRACE stmts RBRACE  (6)

	LPAREN  shift 20
	.  error


state 17
	program : decls main EOF .  (1)

	.  reduce 1


state 18
	vdecl : dtype ID . SEMI  (5)

	SEMI  shift 21
	.  error


state 19
	main : MAIN LPAREN RPAREN . LBRACE stmts RBRACE  (7)

	LBRACE  shift 22
	.  error


state 20
	fdecl : FUNCTION ID LPAREN . formals RPAREN LBRACE stmts RBRACE  (6)
	formals : .  (8)

	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	RPAREN  reduce 8
	COMMA  reduce 8

	dtype  goto 23
	formals  goto 24


state 21
	vdecl : dtype ID SEMI .  (5)

	.  reduce 5


state 22
	main : MAIN LPAREN RPAREN LBRACE . stmts RBRACE  (7)
	stmts : .  (15)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	IF  shift 29
	FOR  shift 30
	WHILE  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	RETURN  shift 34
	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 39
	RBRACE  reduce 15

	vdecl  goto 40
	dtype  goto 41
	stmts  goto 42
	stmt  goto 43
	expr  goto 44
	assignstmt  goto 45
	MLIT  goto 46


state 23
	formals : dtype . ID  (9)

	ID  shift 47
	.  error


state 24
	fdecl : FUNCTION ID LPAREN formals . RPAREN LBRACE stmts RBRACE  (6)
	formals : formals . COMMA dtype ID  (10)

	RPAREN  shift 48
	COMMA  shift 49
	.  error


state 25
	expr : MINUS . expr  (41)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 51
	MLIT  goto 46


state 26
	expr : NOT . expr  (42)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 52
	MLIT  goto 46


state 27
	expr : LPAREN . expr RPAREN  (40)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 53
	MLIT  goto 46


state 28
	MLIT : LBRACK . matrix_row_list RBRACK  (60)

	FLIT  shift 54
	.  error

	matrix_row_list  goto 55
	matrix_row  goto 56
	elements  goto 57
	element  goto 58


state 29
	stmt : IF . LPAREN expr RPAREN LBRACE stmts RBRACE elifstmts  (21)
	stmt : IF . LPAREN expr RPAREN LBRACE stmts RBRACE elifstmts ELSE LBRACE stmts RBRACE  (22)

	LPAREN  shift 59
	.  error


state 30
	stmt : FOR . LPAREN stmt SEMI expr SEMI expr RPAREN LBRACE stmts RBRACE  (23)

	LPAREN  shift 60
	.  error


state 31
	stmt : WHILE . LPAREN expr RPAREN LBRACE stmts RBRACE  (24)

	LPAREN  shift 61
	.  error


state 32
	stmt : BREAK . SEMI  (19)

	SEMI  shift 62
	.  error


state 33
	stmt : CONTINUE . SEMI  (20)

	SEMI  shift 63
	.  error


state 34
	stmt : RETURN . expr SEMI  (18)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 64
	MLIT  goto 46


state 35
	expr : ILIT .  (33)

	.  reduce 33


state 36
	expr : FLIT .  (34)

	.  reduce 34


state 37
	expr : TRUE .  (36)

	.  reduce 36


state 38
	expr : FALSE .  (37)

	.  reduce 37


state 39
	assignstmt : ID . PLUSASSIGN expr SEMI  (30)
	assignstmt : ID . MINUSASSIGN expr SEMI  (31)
	assignstmt : ID . ASSIGN expr SEMI  (32)
	expr : ID .  (38)
	expr : ID . LPAREN inputs RPAREN  (39)

	ASSIGN  shift 65
	PLUSASSIGN  shift 66
	MINUSASSIGN  shift 67
	LPAREN  shift 68
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	MOD  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LT  reduce 38
	LEQ  reduce 38
	GT  reduce 38
	GEQ  reduce 38
	REFEQ  reduce 38
	AND  reduce 38
	OR  reduce 38
	SEMI  reduce 38


state 40
	stmt : vdecl .  (25)

	.  reduce 25


state 41
	vdecl : dtype . ID SEMI  (5)
	assignstmt : dtype . ID ASSIGN expr SEMI  (29)

	ID  shift 69
	.  error


state 42
	main : MAIN LPAREN RPAREN LBRACE stmts . RBRACE  (7)

	RBRACE  shift 70
	.  error


state 43
	stmts : stmt . stmts  (16)
	stmts : .  (15)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	IF  shift 29
	FOR  shift 30
	WHILE  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	RETURN  shift 34
	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 39
	RBRACE  reduce 15

	vdecl  goto 40
	dtype  goto 41
	stmts  goto 71
	stmt  goto 43
	expr  goto 44
	assignstmt  goto 45
	MLIT  goto 46


state 44
	stmt : expr . SEMI  (17)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	SEMI  shift 86
	.  error


state 45
	stmt : assignstmt .  (26)

	.  reduce 26


state 46
	expr : MLIT .  (35)

	.  reduce 35


state 47
	formals : dtype ID .  (9)

	.  reduce 9


state 48
	fdecl : FUNCTION ID LPAREN formals RPAREN . LBRACE stmts RBRACE  (6)

	LBRACE  shift 87
	.  error


state 49
	formals : formals COMMA . dtype ID  (10)

	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	.  error

	dtype  goto 88


state 50
	expr : ID .  (38)
	expr : ID . LPAREN inputs RPAREN  (39)

	LPAREN  shift 68
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	MOD  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LT  reduce 38
	LEQ  reduce 38
	GT  reduce 38
	GEQ  reduce 38
	REFEQ  reduce 38
	AND  reduce 38
	OR  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	SEMI  reduce 38


51: shift/reduce conflict (shift 84, reduce 41) on AND
51: shift/reduce conflict (shift 85, reduce 41) on OR
state 51
	expr : MINUS expr .  (41)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	AND  shift 84
	OR  shift 85
	PLUS  reduce 41
	MINUS  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41
	REFEQ  reduce 41
	RPAREN  reduce 41
	COMMA  reduce 41
	SEMI  reduce 41


52: shift/reduce conflict (shift 72, reduce 42) on PLUS
52: shift/reduce conflict (shift 73, reduce 42) on MINUS
52: shift/reduce conflict (shift 74, reduce 42) on TIMES
52: shift/reduce conflict (shift 75, reduce 42) on DIVIDE
52: shift/reduce conflict (shift 76, reduce 42) on MOD
52: shift/reduce conflict (shift 77, reduce 42) on EQ
52: shift/reduce conflict (shift 78, reduce 42) on NEQ
52: shift/reduce conflict (shift 79, reduce 42) on LT
52: shift/reduce conflict (shift 80, reduce 42) on LEQ
52: shift/reduce conflict (shift 81, reduce 42) on GT
52: shift/reduce conflict (shift 82, reduce 42) on GEQ
52: shift/reduce conflict (shift 83, reduce 42) on REFEQ
52: shift/reduce conflict (shift 84, reduce 42) on AND
52: shift/reduce conflict (shift 85, reduce 42) on OR
state 52
	expr : NOT expr .  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	RPAREN  reduce 42
	COMMA  reduce 42
	SEMI  reduce 42


state 53
	expr : LPAREN expr . RPAREN  (40)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	RPAREN  shift 89
	.  error


state 54
	element : FLIT .  (66)

	.  reduce 66


state 55
	MLIT : LBRACK matrix_row_list . RBRACK  (60)

	RBRACK  shift 90
	.  error


state 56
	matrix_row_list : matrix_row .  (61)
	matrix_row_list : matrix_row . SEMI matrix_row_list  (62)

	SEMI  shift 91
	RBRACK  reduce 61


state 57
	matrix_row : elements .  (63)

	.  reduce 63


state 58
	elements : element .  (64)
	elements : element . COMMA elements  (65)

	COMMA  shift 92
	RBRACK  reduce 64
	SEMI  reduce 64


state 59
	stmt : IF LPAREN . expr RPAREN LBRACE stmts RBRACE elifstmts  (21)
	stmt : IF LPAREN . expr RPAREN LBRACE stmts RBRACE elifstmts ELSE LBRACE stmts RBRACE  (22)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 93
	MLIT  goto 46


state 60
	stmt : FOR LPAREN . stmt SEMI expr SEMI expr RPAREN LBRACE stmts RBRACE  (23)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	IF  shift 29
	FOR  shift 30
	WHILE  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	RETURN  shift 34
	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 39
	.  error

	vdecl  goto 40
	dtype  goto 41
	stmt  goto 94
	expr  goto 44
	assignstmt  goto 45
	MLIT  goto 46


state 61
	stmt : WHILE LPAREN . expr RPAREN LBRACE stmts RBRACE  (24)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 95
	MLIT  goto 46


state 62
	stmt : BREAK SEMI .  (19)

	.  reduce 19


state 63
	stmt : CONTINUE SEMI .  (20)

	.  reduce 20


state 64
	stmt : RETURN expr . SEMI  (18)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	SEMI  shift 96
	.  error


state 65
	assignstmt : ID ASSIGN . expr SEMI  (32)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 97
	MLIT  goto 46


state 66
	assignstmt : ID PLUSASSIGN . expr SEMI  (30)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 98
	MLIT  goto 46


state 67
	assignstmt : ID MINUSASSIGN . expr SEMI  (31)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 99
	MLIT  goto 46


state 68
	expr : ID LPAREN . inputs RPAREN  (39)
	inputs : .  (57)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	RPAREN  reduce 57

	expr  goto 100
	MLIT  goto 46
	inputs  goto 101


state 69
	vdecl : dtype ID . SEMI  (5)
	assignstmt : dtype ID . ASSIGN expr SEMI  (29)

	ASSIGN  shift 102
	SEMI  shift 21
	.  error


state 70
	main : MAIN LPAREN RPAREN LBRACE stmts RBRACE .  (7)

	.  reduce 7


state 71
	stmts : stmt stmts .  (16)

	.  reduce 16


state 72
	expr : expr PLUS . expr  (45)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 103
	MLIT  goto 46


state 73
	expr : expr MINUS . expr  (46)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 104
	MLIT  goto 46


state 74
	expr : expr TIMES . expr  (47)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 105
	MLIT  goto 46


state 75
	expr : expr DIVIDE . expr  (48)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 106
	MLIT  goto 46


state 76
	expr : expr MOD . expr  (49)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 107
	MLIT  goto 46


state 77
	expr : expr EQ . expr  (50)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 108
	MLIT  goto 46


state 78
	expr : expr NEQ . expr  (51)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 109
	MLIT  goto 46


state 79
	expr : expr LT . expr  (52)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 110
	MLIT  goto 46


state 80
	expr : expr LEQ . expr  (53)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 111
	MLIT  goto 46


state 81
	expr : expr GT . expr  (54)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 112
	MLIT  goto 46


state 82
	expr : expr GEQ . expr  (55)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 113
	MLIT  goto 46


state 83
	expr : expr REFEQ . expr  (56)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 114
	MLIT  goto 46


state 84
	expr : expr AND . expr  (43)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 115
	MLIT  goto 46


state 85
	expr : expr OR . expr  (44)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 50
	.  error

	expr  goto 116
	MLIT  goto 46


state 86
	stmt : expr SEMI .  (17)

	.  reduce 17


state 87
	fdecl : FUNCTION ID LPAREN formals RPAREN LBRACE . stmts RBRACE  (6)
	stmts : .  (15)

	MINUS  shift 25
	NOT  shift 26
	LPAREN  shift 27
	LBRACK  shift 28
	IF  shift 29
	FOR  shift 30
	WHILE  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	RETURN  shift 34
	INT  shift 7
	FLOAT  shift 8
	BOOLEAN  shift 9
	MATRIX  shift 10
	ILIT  shift 35
	FLIT  shift 36
	TRUE  shift 37
	FALSE  shift 38
	ID  shift 39
	RBRACE  reduce 15

	vdecl  goto 40
	dtype  goto 41
	stmts  goto 117
	stmt  goto 43
	expr  goto 44
	assignstmt  goto 45
	MLIT  goto 46


state 88
	formals : formals COMMA dtype . ID  (10)

	ID  shift 118
	.  error


state 89
	expr : LPAREN expr RPAREN .  (40)

	.  reduce 40


state 90
	MLIT : LBRACK matrix_row_list RBRACK .  (60)

	.  reduce 60


state 91
	matrix_row_list : matrix_row SEMI . matrix_row_list  (62)

	FLIT  shift 54
	.  error

	matrix_row_list  goto 119
	matrix_row  goto 56
	elements  goto 57
	element  goto 58


state 92
	elements : element COMMA . elements  (65)

	FLIT  shift 54
	.  error

	elements  goto 120
	element  goto 58


state 93
	stmt : IF LPAREN expr . RPAREN LBRACE stmts RBRACE elifstmts  (21)
	stmt : IF LPAREN expr . RPAREN LBRACE stmts RBRACE elifstmts ELSE LBRACE stmts RBRACE  (22)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	RPAREN  shift 121
	.  error


state 94
	stmt : FOR LPAREN stmt . SEMI expr SEMI expr RPAREN LBRACE stmts RBRACE  (23)

	SEMI  shift 122
	.  error


state 95
	stmt : WHILE LPAREN expr . RPAREN LBRACE stmts RBRACE  (24)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	RPAREN  shift 123
	.  error


state 96
	stmt : RETURN expr SEMI .  (18)

	.  reduce 18


state 97
	assignstmt : ID ASSIGN expr . SEMI  (32)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	SEMI  shift 124
	.  error


state 98
	assignstmt : ID PLUSASSIGN expr . SEMI  (30)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)

	PLUS  shift 72
	MINUS  shift 73
	TIMES  shift 74
	DIVIDE  shift 75
	MOD  shift 76
	EQ  shift 77
	NEQ  shift 78
	LT  shift 79
	LEQ  shift 80
	GT  shift 81
	GEQ  shift 82
	REFEQ  shift 83
	AND  shift 84
	OR  shift 85
	SEMI  shift 125
	.  error


state 99
	assignstmt : ID MINUSASSIGN expr . SEMI  (31)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . MOD expr  (49)
	expr : expr . EQ expr  (50)
	expr : expr . NEQ expr  (51)
	expr : expr . LT expr  (52)
	expr : expr . LEQ expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . GEQ expr  (55)
	expr : expr . REFEQ expr  (56)
